<resources>
    <string name="app_name" translatable="false">DnD_Book</string>
    <string name="d_amp_d_book" translatable="false"><![CDATA[D&D Book]]></string>
    <string name="dados">Dados</string>
    <string name="titulo">Administración</string>
    <string name="numero_de_dados">Número de dados</string>
    <string name="modificador_positivo">Modificador positivo</string>
    <string name="tirar">Tirar</string>
    <string name="resultado_final">Resultado final:</string>
    <string name="resultado_de_cada_dado">Resultado de cada dado:</string>
    <string name="dado1_3_dado2_9_dado3_15_dado4_10_dado5_1_scroll_para_ver_todos_los_dados_si_es_necesario" translatable="false">Dado1: 3, Dado2: 9, Dado3:15, Dado4: 10, Dado5: 1 (Scroll para ver todos los dados (si es necesario))</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="novedades">Novedades</string>
    <string name="compedios">Compendios</string>
    <string name="reglas">Reglas</string>
    <string name="compendios">Compendios</string>
    <string name="Novedades">Novedades</string>
    <string name="Reglas">Reglas</string>
    <string name="Dados">Dados</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="acepta_los_terminos_de_privacidad" translatable="false">Acepta los terminos de privacidad?</string>
    <string name="continuar">Continuar</string>
    <string name="ya_tienes_una_cuenta">Ya tienes una cuenta?</string>
    <string name="entrar">Entrar</string>
    <string name="has_olvidado_la_contrase_a">Has olvidado la contraseña?</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string-array name="programming_languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>CPP</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="manual_del_jugador" translatable="false">manual del jugador</string>
    <string name="manual_del_dungeon_master_5e" translatable="false">manual del dungeon master 5e</string>
    <string name="manual_de_monstruos_5e" translatable="false">manual de monstruos 5e</string>
    <string name="el_resurgir_del_dragon_5e" translatable="false">el resurgir del dragon 5e</string>
    <string name="escribe_la_rega">Escribe la regla</string>
    <string name="a_adido">Añadido:</string>
    <string name="eliminado">Eliminado:</string>
    <string name="modificado">Modificado:</string>
    <string name="usuarios">Usuarios</string>
    <string name="humpty_dumpty" translatable="false">Humpty Dumpty</string>
    <string name="dumpty_humpty_copernic_cat" translatable="false">dumpty.humpty@copernic.cat</string>
    <string name="jorge_cerdo" translatable="false">Jorge Cerdo</string>
    <string name="ricardo_calamar" translatable="false">Ricardo Calamar</string>
    <string name="calamar_ricardo_copernic_cat" translatable="false">calamar.ricardo@copernic.cat</string>
    <string name="cerdo_jorge_copernic_cat" translatable="false">cerdo.jorge@copernic.cat</string>
    <string name="acci_n">Acción</string>
    <string name="acci_n_bonus">Acciòn Bonus</string>
    <string name="reacci_n">Reacción</string>
    <string name="movimiento">Movimiento</string>
    <string name="estados_alterados">Estados Alterados</string>
    <string name="alcance">Alcance</string>
    <string name="cr_ticos">Críticos</string>
    <string name="equipamiento">Equipamiento</string>
    <string name="trasfondos">Trasfondos</string>
    <string name="nivel">Nivel</string>
    <string name="dotes">Dotes</string>
    <string name="multiclase">Multiclase</string>
    <string name="flecha">Flecha para volver hacia atras</string>
    <string name="usuario">imagen de perfil del usuario</string>
    <string name="logo">imagen logo</string>
    <string name="dado">dado</string>
    <string name="ajustes">ajustes</string>
    <string name="boton_cerrar_sesion">Boton cerrar sesion</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="boto_editar_perfil">Boto editar perfil</string>
    <string name="crear_nuevo_personaje">Crear nuevo personaje</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="recuperar">Recuperar</string>
    <string name="imagen_personaje_calamardo" translatable="false">Imagen personaje Calamardo</string>
    <string name="imagen_personaje_jorge" translatable="false">Imagen personaje Jorge</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="img_logo" translatable="false">img_logo</string>
    <string name="player_handbook" translatable="false">player_handbook</string>
    <string name="imatge4" translatable="false">imatge4</string>
    <string name="imatge3" translatable="false">imatge3</string>
    <string name="imatge2" translatable="false">imatge2</string>
    <string name="imatge1" translatable="false">imatge1</string>
    <string name="favoritos">Favoritos</string>
    <string name="repetir_contrasenya">Repetir Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="perfil">perfil</string>
    <string name="estadisticas">estadisticas</string>
    <string name="partidas">partidas</string>
    <string name="inici">inicio</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="numero_de_caras">Numero de caras</string>
    <string name="modificador_negativo">Modificador negativo</string>
    <string name="afegir">Añadir</string>
    <string name="a_adir_novedades">Añadir novedades</string>
    <string name="a_adir_reglas">Añadir reglas</string>
    <string name="a_adir_compendio">Añadir compendio</string>
    <string name="nombre">Nombre</string>
    <string name="fallo">Fallo</string>
    <string name="exito">Exito</string>
    <string name="tiradas_de_salvaci_n">Tiradas de salvación</string>
    <string name="dados_de_golpe">Dados de golpe</string>
    <string name="iniciper">Inicio</string>
    <string name="mov">MOV</string>
    <string name="sab">SAB</string>
    <string name="car">CAR</string>
    <string name="con">CON</string>
    <string name="intt">INT</string>
    <string name="des">DES</string>
    <string name="fue">FUE</string>
    <string name="actual">Actual</string>
    <string name="comida_y_objetos">Comida y objetos</string>
    <string name="platino">Platino</string>
    <string name="oro">Oro</string>
    <string name="plata">Plata</string>
    <string name="cobre">Cobre</string>
    <string name="dinero">Dinero</string>
    <string name="armas_y_armaduras">Armas y armaduras</string>
    <string name="admin_inici">Admin inicio</string>
    <string name="modificar_regla">Modificar regla</string>
    <string name="editar_o_eliminar_regla">Editar o eliminar regla</string>
    <string name="anadir_compendio">Añadir compendio</string>
    <string name="este_compendio_ya_existe">Este compendio ya existe</string>
    <string name="compendio_anadido">Compendio añadido</string>
    <string name="el_compendio">"El compendio "</string>
    <string name="compendio_anadido_correctamente">Compendio añadido correctamente</string>
    <string name="se_a_anadido">" se a añadido"</string>
    <string name="imagen_subida_con_exito">Imagen subida con exito</string>
    <string name="anadir_regla">Añadir regla</string>
    <string name="esta_regla_ya_existe">Esta regla ya existe</string>
    <string name="regla_anadida">Regla añadida</string>
    <string name="la_regla">"La regla "</string>
    <string name="regla_anadida_correctamente">Regla añadida correctamente</string>
    <string name="novedades_admin">Novedades admin</string>
    <string name="usuarioss">Usuarios</string>
    <string name="eliminar_regla">Eliminar regla</string>
    <string name="seguro_que_quieres_eliminar_la_regla">"Seguro que quieres eliminar la regla: "</string>
    <string name="cancelar">Cancelar</string>
    <string name="regla_eliminada">Regla eliminada</string>
    <string name="se_a_eliminado_correctamente">" se a eliminado correctamente"</string>
    <string name="regla_eliminada_correctamente">Regla eliminada correctamente</string>
    <string name="regla_modificada">Regla modificada</string>
    <string name="se_a_modificado_correctamente">" se a modificado correctamente"</string>
    <string name="regla_modificada_correctamente">Regla modificada correctamente</string>
    <string name="editar_equipamiento">Editar equipamiento</string>
    <string name="editar_estadisticas_secundarias">Editar estadisticas secundarias</string>
    <string name="editar_personaje">Editar personaje</string>
    <string name="editar_habilidades">Editar habilidades</string>
    <string name="personaje_editado_correctamente">Personaje editado correctamente</string>
    <string name="personaje_editado">Personaje editado</string>
    <string name="se_a_editado_correctamente_a">"Se a editado correctamente a: "</string>
    <string name="editar_o_eliminar_personaje">Editar o eliminar personaje</string>
    <string name="eliminar_personaje">Eliminar personaje</string>
    <string name="seguro_que_quieres_eliminar_el_personaje">"Seguro que quieres eliminar el personaje: "</string>
    <string name="personaje_eliminado_correctamente">Personaje eliminado correctamente</string>
    <string name="estadisticas_secundarias">Estadisticas secundarias</string>
    <string name="crear_personaje">Crear personaje</string>
    <string name="este_personaje_ya_existe">Este personaje ya existe</string>
    <string name="imagen_subida_correctamente">Imagen subida correctamente</string>
    <string name="resultado_final2">"Resultado final: "</string>
    <string name="inicio">Inicio</string>
    <string name="crear_partida">Crear partida</string>
    <string name="partida_creada_correctamente">Partida creada correctamente</string>
    <string name="modificar_o_eliminar_partida">Modificar o eliminar partida</string>
    <string name="eliminar_partida">Eliminar partida</string>
    <string name="seguro_que_quieres_eliminar_la_partida">"Seguro que quieres eliminar la partida: "</string>
    <string name="equipamineto_partida">Equipamiento partida</string>
    <string name="estadisticas_secundarias_partida">Estadisticas secundarias partida</string>
    <string name="partida_general">Partida general</string>
    <string name="habilidades_partida">Habilidades partida</string>
    <string name="partida_editada_correctamente">Partida editada correctamente</string>
    <string name="partida_editada">Partida editada</string>
    <string name="se_a_editado_correctamente_la_partida">"Se a editado correctamente la partida: "</string>
    <string name="iniciar_sesion_fallido">Iniciar sesion fallido</string>
    <string name="la_contrasena_no_puede_estar_vacia">La contraseña no puede estar vacia</string>
    <string name="el_usuario_no_puede_estar_vacio">El usuario no puede estar vacio</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="partida">Partida:</string>
</resources>