<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent">


    <item
        android:id="@+id/img_usuario_menu"
        android:icon="@drawable/creador_del_sexo"
        android:title="@string/usuario"
        app:showAsAction="always" />
    <item
        android:id="@+id/img_logo_menu"
        android:icon="@drawable/logo"
        android:title="@string/logo"
        app:showAsAction="always" />
    <item
        android:id="@+id/inici"
        android:title="@string/inici"
        app:showAsAction="never" />
    <item
        android:id="@+id/estadisticas"
        android:title="@string/estadisticas"
        app:showAsAction="never" />
    <item
        android:id="@+id/perfil"
        android:title="@string/perfil"
        app:showAsAction="never" />
    <item
        android:id="@+id/partidas"
        android:title="@string/partidas"
        app:showAsAction="never" />
    <item
        android:id="@+id/cerrarsesion"
        android:title="@string/cerrar_sesi_n"
        app:showAsAction="never" />


</menu>