<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#00FFFFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/img_personaje_calamardo"
            android:layout_width="192dp"
            android:layout_height="179dp"
            android:layout_marginStart="110dp"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/calamardo"
            android:contentDescription="@string/imagen_personaje_calamardo" />

        <TextView
            android:id="@+id/txt_personaje_calamardo"
            style="@style/txt_nombre_personajes"
            android:text="@string/ricardo_calamar"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="72dp" />

        <ImageButton
            android:id="@+id/img_personaje_jorge"
            android:layout_width="192dp"
            android:layout_height="179dp"
            android:layout_marginStart="110dp"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/jorge"
            android:contentDescription="@string/imagen_personaje_jorge" />

        <TextView
            android:id="@+id/txt_personaje_jorge"
            style="@style/txt_nombre_personajes"
            android:text="@string/jorge_cerdo"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="72dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>