<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/tapa"
    tools:context=".PreInici.recuperar_contrasenya">


    <ImageView
        android:id="@+id/img_logo_recuperar_contrasenya"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/txt_recuperar_contrasenya"
        style="@style/Widget.DnD_Book.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:text="@string/recuperar_contrase_a"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txt_email"
        style="@style/Widget.DnD_Book.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:text="@string/email"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_txt_email_contrasenya"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_email_contrasenya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/groc" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_recuperar_contrasenya"
        style="@style/Widget.DnD_Book.Button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:text="@string/recuperar"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/botoActivityLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginStart="24dp"
        android:text="@string/iniciar_sesion"
        android:textSize="16sp"
        style="@style/Widget.DnD_Book.Button"/>

</LinearLayout>